--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div>
     <h1 class="white-text">myPlace</h1>
     <div class="button-op">
-      <input class="btn btn-login" type="button" value="inicia sesión">
-      <input class="btn btn-signup" type="button" value="registrate">
+      <input class="btn btn-login" type="button" id="login" value="inicia sesión">
+      <input class="btn btn-signup" type="button" id="signup" value="registrate">
     </div>
   </div>
   <!-- form -->
@@ -40,6 +40,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="js/particles.js"></script>
+  <script src="js/dataparticles.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
