--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </div>
   </div>
   <!-- form -->
-  <div class="container form-signup">
+  <div class="container form-signup" id="form-signup-white">
+    <form action="" >
     <label for="name">Name</label>
     <input id="name" type="text" class="validate">
     <label for="email">Email</label>
@@ -33,7 +34,7 @@
     <br>
     <p class="text-center">Al hacer click en <b>registrarse</b> aceptas los <a href="">Términos y condiciones</a>.</p>
   </div>
-  
+  </form>
   <div id="particles-js"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script> -->
