mejorando vista del index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- navigation -->
   <div>
-    <h1 class="white-text">myPlace</h1>
+    <h1 class="white-text text-logo">myPlace</h1>
     <div class="button-op">
       <input class="btn btn-login" type="button" id="login" value="inicia sesión">
       <input class="btn btn-signup" type="button" id="signup" value="registrate">
