--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <label for="name">Name</label>
     <input id="name" type="text" class="validate">
     <label for="email">Email</label>
-    <input id="email" type="text" class="validate">
+    <input id="email" type="email" class="validate">
     <label for="password">Password</label>
-    <input id="password" type="text" class="validate">
+    <input id="password" type="password" class="validate">
     <div class="text-center">
       <button class="btn btn-account">registrarse</button>
     </div>
@@ -38,6 +38,7 @@
   <div id="particles-js"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="js/particles.js"></script>
