--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 <body>
   <!-- navigation -->
   <div>
-    <img src="assets/images/logotipo.png" alt="logo_white" class="logo responsive-img">
+    <img src="assets/images/logos-horizontal.png" alt="logo_white" class="logo-main hide-on-small-only">
     <div class="button-op">
       <input class="btn btn-login" type="button" id="login" value="inicia sesión">
       <input class="btn btn-signup" type="button" id="signup" value="registrate">
     </div>
+  </div>
+  <div>
+    <img src="assets/images/logos1.png" class="logo hide-on-large-only logo-main" alt="">
   </div>
   <!-- form -->
   <div class="container form-signup" id="form-signup-white">
