--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div>
-    <img src="assets/images/logos1.png" class="logo hide-on-large-only logo-main" alt="">
+    <img src="assets/images/logos1.png" class="logo-tipo hide-on-large-only" alt="">
   </div>
   <!-- form -->
   <div class="container form-signup" id="form-signup-white">
