--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <label for="name">Name</label>
     <input id="name" type="text" class="validate">
     <label for="email">Email</label>
-    <input id="email" type="text" class="validate">
+    <input id="email" type="email" class="validate">
     <label for="password">Password</label>
-    <input id="password" type="text" class="validate">
+    <input id="password" type="password" class="validate">
+    <span id="span-signup">La contraseña debe tener al menos un letra mayúscula, una letra minúscula, número y una longitud mínimo de 8 dígitos.</span>
     <div class="text-center">
       <button class="btn btn-account" id="button-signup">registrarse</button>
     </div>
-    <br>
-    <p class="text-center">Al hacer click en <b>registrarse</b> aceptas los <a href="">Términos y condiciones</a>.</p>
+    <p class="text-center terms">Al hacer click en <b>registrarse</b> aceptas los <a href="">Términos y condiciones</a>.</p>
   </div>
   </form>
   <div id="particles-js"></div>
