--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- navigation -->
   <div>
-    <img src="assets/images/logos-horizontal.png" alt="logo_white" class="logo-main hide-on-small-only">
+    <img src="assets/images/img.png" alt="logo_white" class="logo-main hide-on-small-only">
     <div class="button-op">
       <input class="btn btn-login" type="button" id="login" value="inicia sesión">
       <input class="btn btn-signup" type="button" id="signup" value="registrate">
@@ -40,7 +40,6 @@
   </form>
   <div id="particles-js"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="js/particles.js"></script>
